# ClimatExML

./: .buildinfo  .gitignore  Dockerfile  README.md  _config.yml  _toc.yml  build_docs.html  configuring.html  container_cmd.sh  customizing.html  docker_run.sh  env_vars.sh  genindex.html  infering.html  installing.html  intro.html  intro.md  loader.py  local.html  models.py  objects.inv  performance.html  performance.md  preprocessing.html  pyproject.toml  search.html  searchindex.js  setup.py  tracking.html  training.html  training.py
.doctrees/: configuring.doctree  environment.pickle  local.doctree  markdown-notebooks.doctree  training.doctree
ClimatExML/: README.md  loader.py  losses.py  mlclasses.py  models.py  setup.py  train.py  training.py  wgan_gp.py  wgan_gp_stoch.py
ClimatExML/ClimatExML/: loader.py  logging_tools.py  losses.py  mlclasses.py  models.py  train.py  wgan_gp.py
ClimatExML/conf/: config.yaml  config_old.yaml
ClimatExML/data/: hr_topography_norm.pt
ClimatExML/hpc/: docker_run.sh  train_job.sh
ClimatExML/mlflow_tools/: mlflow_tools.py  (+1 more)
_sources/: build_docs.md  configuring.md  installing.md  local.md  performance.md  preprocessing.md  tracking.md  training.md
config/: io.yaml
docs/: _toc.yml  customizing.md  infering.md  installing.md  references.bib  tracking.md  training.md
hpc/: apptainer_cmd.sh  train_job.sh
html/: .buildinfo  customize.html  customizing.html  intro.html  training.html
jupyter_execute/: configuring.ipynb  preprocessing.ipynb  training.ipynb
notebooks/: UBC.ipynb  benchmarks.ipynb  makeloader.ipynb
(+40 files in other folders)
